--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,7 @@
             <button onclick="appendNumber(8)">8</button>
             <button onclick="appendNumber(9)">9</button>
             <br>
+            <button onclick="appendNumber(0)">0</button>
             <button onclick="clearCode()">C</button>
         </div>
     </div>
